syntax = "proto3";
option java_multiple_files = true;
package br.ufu.sd.work;

message DeleteRequest {
    int64 id = 1;
    string idClient = 2;
}

message DeleteResponse {
    string response = 1;
}

service DeleteService {
    rpc delete (DeleteRequest) returns (DeleteResponse);
}